--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,6 +28,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="backdrop-hook"></div>
+    <div id="drawer-hook"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
